fixed some spacing issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,7 +82,7 @@ nav {
 }
 
 .nav-links {
-    margin-left: 40px;
+    margin-left: 280px;
     display: flex;
     gap: 18px;
     list-style: none;
@@ -94,7 +94,7 @@ nav {
 
 .nav-btn {
     display: inline-block;
-    padding: 8px 20px;
+    padding: 8px 10px;
     border-radius: 20px;
     background: rgba(56,189,248,0.12);
     color: var(--color-primary-accent);
